@@ -3,7 +3,7 @@ import psutil
 import pandas as pd
 import time
 import re
-from uainepydat import datatransform
+from uainepydat import dataclean
 
 def gather_free_space_in_drive(drive: str) -> float:
     """
@@ -15,12 +15,16 @@ def gather_free_space_in_drive(drive: str) -> float:
     Returns:
     float: The free space in bytes.
     """
-    print(drive)
-    if len(drive) == 1:
-        total, used, free = shutil.disk_usage(drive + ":\\")
-    else:
-        total, used, free = shutil.disk_usage(drive)
-    return free
+    #print(drive)
+    try:
+        if len(drive) == 1:
+            total, used, free = shutil.disk_usage(drive + ":\\")
+        else:
+            total, used, free = shutil.disk_usage(drive)
+        return free
+    except (OSError, FileNotFoundError):
+        print(f"Could not access drive: {drive}")
+        return 0
 
 def free_gb_in_drive(drive: str) -> float:
     """
@@ -50,11 +54,19 @@ def list_drive_spaces() -> pd.DataFrame:
     Returns:
     pd.DataFrame: A DataFrame with the drive names and their free space in gigabytes (GB).
     """
-    df = pd.DataFrame(list_drives(), columns=["drive"])
-    #df["drive"] = df["drive"].apply(datatransform.keep_only_letters)
-    #print(df)
-    df["space_free_gb"] = df["drive"].apply(free_gb_in_drive)
-    return df
+    drives = list_drives()
+    results = []
+    
+    for drive in drives:
+        # Get the actual drive letter or path for accessibility check
+        clean_drive = dataclean.keep_only_letters(drive)
+        try:
+            space_free = free_gb_in_drive(drive)  # Use the original drive path
+            results.append({"drive": clean_drive, "space_free_gb": space_free})
+        except Exception as e:
+            print(f"Error getting space for {drive}: {e}")
+    
+    return pd.DataFrame(results)
 
 def get_largest_drive() -> dict[str, any]:
     """
@@ -72,6 +84,7 @@ def get_largest_drive() -> dict[str, any]:
     
     # Find the index of the drive with maximum free space
     index = df["space_free_gb"].idxmax()
+    return df.iloc[index]
 
 def get_free_ram_in_gb() -> float:
     """
@@ -266,11 +279,11 @@ def get_system_info() -> dict:
     }
 
 # Example executions:
-# if __name__ == "__main__":
-#     # Drive space examples
-#     print(free_gb_in_drive("C"))
-#     print(list_drives())
-#     print("Drive with most free space:", get_largest_drive())
+#if __name__ == "__main__":
+    # Drive space examples
+    #print(free_gb_in_drive("C"))
+    #print(list_drives())
+    #print("Drive with most free space:", get_largest_drive()["drive"])
     
 #     # RAM examples
 #     print("Free RAM (GB):", get_free_ram_in_gb())
